--- a/templates/colors.html
+++ b/templates/colors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Color Scheme</title>
+    <title>ColorScheme</title>
     <style>
         :root{
             --first: {{ colors[0] }};
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-    <h1>ColorTool</h1>
+    <h1>ColorScheme</h1>
     <div class="color-container">
         <div>
             <div class="color-box" style="background-color: var(--first);"></div>
